tuned CNN, added plotting

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:torchao.kernel.intmm:Warning: Detected no triton, on systems without Triton certain kernels will not work\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -15,6 +23,7 @@
     "import pickle as pkl\n",
     "\n",
     "from typing import Literal\n",
+    "from dataclasses import dataclass\n",
     "from matplotlib import pyplot as plt\n",
     "from tqdm import tqdm\n",
     "from torchvision.transforms import v2\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,95 +164,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dl, test_dl = get_loader(real_img_percent=1.0, ai_img_percent=1.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_dl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11/11 [00:50<00:00,  4.60s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for img, label in tqdm(train_dl, total=len(train_dl)):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 22/22 [00:50<00:00,  2.30s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{54: 60, 63: 60, 64: 60, 89: 60, 33: 60, 51: 60, 25: 60, 77: 60, 19: 60, 41: 60, 22: 60, 49: 60, 74: 60, 78: 60, 17: 60, 79: 60, 86: 60, 23: 60, 50: 60, 73: 60, 52: 60, 32: 60, 26: 60, 31: 60, 76: 60, 60: 60, 45: 60, 46: 60, 35: 60, 67: 60, 12: 60, 75: 60, 37: 60, 55: 60, 62: 60, 7: 60, 5: 60, 40: 60, 6: 60, 47: 60, 30: 60, 65: 60, 53: 60, 85: 60, 71: 60, 3: 60, 83: 60, 43: 60, 72: 60, 10: 60, 61: 60, 36: 60, 27: 60, 87: 60, 21: 60, 8: 60, 20: 60, 84: 60, 9: 60, 70: 60, 81: 60, 13: 60, 42: 60, 82: 60, 88: 60, 34: 60, 15: 60, 28: 60, 44: 60, 66: 60, 29: 60, 48: 60, 58: 60, 1: 60, 0: 60, 68: 60, 59: 60, 4: 60, 18: 60, 16: 60, 69: 60, 24: 60, 11: 60, 39: 60, 56: 60, 2: 60, 80: 60, 14: 60, 38: 60, 57: 60}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 0\n",
-    "class_counts = {}\n",
-    "for img, label in tqdm(train_dl, total=len(train_dl)):\n",
-    "    i += 1\n",
-    "    # if i > 4:\n",
-    "    #     break\n",
-    "    # print(img.shape, label.shape)\n",
-    "    for l in label:\n",
-    "        if l.item() not in class_counts:\n",
-    "            class_counts[l.item()] = 0\n",
-    "        class_counts[l.item()] += 1\n",
-    "print(class_counts)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +187,7 @@
     "        self.final_layer_channels = 40\n",
     "        self.flatten_layer_size = self.final_layer_channels * self.FINAL_LAYER_SIZE * self.FINAL_LAYER_SIZE\n",
     "\n",
-    "        # dropout layer\n",
+    "        # dropout layers\n",
     "        self.dropout50 = nn.Dropout(p=0.5)\n",
     "        self.dropout10 = nn.Dropout(p=0.1)\n",
     "\n",
@@ -282,8 +202,6 @@
     "        self.pool4 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.conv5 = nn.Conv2d(in_channels=32, out_channels=self.final_layer_channels, kernel_size=3, padding=1)\n",
     "        self.pool5 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        # self.conv6 = nn.Conv2d(in_channels=32, out_channels=self.final_layer_channels, kernel_size=3, padding=1)\n",
-    "        # self.pool6 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.fc1 = nn.Linear(self.flatten_layer_size, 128)\n",
     "        self.fc2 = nn.Linear(128, n_classes)\n",
     "\n",
@@ -313,11 +231,6 @@
     "        x = self.dropout10(torch.nn.functional.leaky_relu(x))\n",
     "        x = self.pool5(x)\n",
     "\n",
-    "        # # 6: conv -> pool\n",
-    "        # x = self.conv6(x)\n",
-    "        # x = self.dropout10(torch.nn.functional.leaky_relu(x))\n",
-    "        # x = self.pool6(x)\n",
-    "\n",
     "        # flatten the features (the first dimension is batch size)\n",
     "        x = x.view(-1, self.flatten_layer_size)\n",
     "\n",
@@ -329,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,59 +322,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_loss_accuracy(results) -> None:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=3, figsize=(16, 4))\n",
+    "@dataclass\n",
+    "class Result:\n",
+    "    train_losses: list[float]\n",
+    "    avg_train_accuracies: list[float]\n",
+    "    test_losses: list[float]\n",
+    "    test_accuracies: np.ndarray\n",
+    "    avg_test_accuracies: list[float]\n",
+    "    test_precision: np.ndarray\n",
+    "    test_recall: np.ndarray\n",
+    "    test_f1score: np.ndarray\n",
+    "    avg_test_precision: float\n",
+    "    avg_test_recall: float\n",
+    "    avg_test_f1score: float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_basic_results(result: Result):\n",
+    "    print(f\"Train Loss: {result.train_losses[-1]}\")\n",
+    "    print(f\"Train Accuracy: {result.avg_train_accuracies[-1] * 100}%\\n\")\n",
+    "    print(f\"Test Loss: {result.test_losses[-1]}\")\n",
+    "    print(f\"Test Accuracy: {result.avg_test_accuracies[-1] * 100}%\\n\")\n",
+    "    print(f\"Test Precision: {result.avg_test_precision * 100}%\")\n",
+    "    print(f\"Test Recall: {result.avg_test_recall * 100}%\")\n",
+    "    print(f\"Test F1 Score: {result.avg_test_f1score * 100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_loss_accuracy(result: Result) -> None:\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(16, 4))\n",
     "    fig.subplots_adjust(wspace=0.4)\n",
     "\n",
-    "    # ax[0].set_title(\"Loss\")\n",
-    "    # ax[0].set_xlabel(\"Epoch\")\n",
-    "    # ax[0].plot(results[0][0], label=\"Train Loss\", color=\"blue\")\n",
-    "    # ax[0].plot(results[1][0], label=\"Test Loss\", color=\"red\")\n",
-    "    # ax[0].legend()\n",
-    "    # ax[0].set_ylabel(\"Cross Entropy Loss\")\n",
+    "    ax[0].set_title(\"Loss\")\n",
+    "    ax[0].set_xlabel(\"Epoch\")\n",
+    "    ax[0].plot(result.train_losses, label=\"Train Loss\", color=\"blue\")\n",
+    "    ax[0].plot(result.test_losses, label=\"Test Loss\", color=\"red\")\n",
+    "    ax[0].legend()\n",
+    "    ax[0].set_ylabel(\"Cross Entropy Loss\")\n",
+    "    ax[0].grid(axis=\"both\", linestyle=\"--\", alpha=0.7)\n",
     "\n",
-    "    # ax[1].set_title(\"Accuracy\")\n",
-    "    # ax[1].set_xlabel(\"Epoch\")\n",
-    "    # ax[1].plot(results[0][1], label=\"Train Accuracy\", color=\"blue\")\n",
-    "    # ax[1].plot(results[1][1], label=\"Test Accuracy\", color=\"red\")\n",
-    "    # ax[1].legend()\n",
-    "    # ax[1].set_ylabel(\"Accuracy (%)\")\n",
-    "\n",
-    "    # ax[2].set_title(\"Precision and Recall\")\n",
-    "    # ax[2].set_xlabel(\"Epoch\")\n",
-    "    # ax[2].plot(results[2][0], label=\"Test Precision\", color=\"cyan\")\n",
-    "    # ax[2].plot(results[2][1], label=\"Test Recall\", color=\"orange\")\n",
-    "    # ax[2].legend()\n",
-    "    # ax[2].set_ylabel(\"Precision/Recall Score (0-1)\")"
+    "    ax[1].set_title(\"Accuracy\")\n",
+    "    ax[1].set_xlabel(\"Epoch\")\n",
+    "    ax[1].plot(np.array(result.avg_train_accuracies)*100, label=\"Train Accuracy\", color=\"blue\")\n",
+    "    ax[1].plot(np.array(result.avg_test_accuracies)*100, label=\"Test Accuracy\", color=\"red\")\n",
+    "    ax[1].legend()\n",
+    "    ax[1].set_ylabel(\"Accuracy (%)\")\n",
+    "    ax[1].grid(axis=\"both\", linestyle=\"--\", alpha=0.7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_improvement_by_class(results) -> None:\n",
-    "    pass"
+    "def plot_improvement_by_class(\n",
+    "    result_left: Result,\n",
+    "    result_right: Result,\n",
+    "    metric: str,\n",
+    "    classes: list[str],\n",
+    "    title: str = \"Changes by Class\",\n",
+    "    multiply_by: float = 1.0,\n",
+    ") -> None:\n",
+    "    # metric can be \"test_accuracies\", \"test_precision\", \"test_recall\", \"test_f1score\"\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "\n",
+    "    diffs = np.array(result_right.__getattribute__(metric) - result_left.__getattribute__(metric))*multiply_by\n",
+    "    sorted_indices = np.argsort(diffs)\n",
+    "    diffs = diffs[sorted_indices]\n",
+    "    classes = np.array(classes)[sorted_indices]\n",
+    "\n",
+    "    mask_positive = diffs >= 0\n",
+    "    mask_negative = diffs < 0\n",
+    "\n",
+    "    negative = ax.bar(classes[mask_negative], diffs[mask_negative], color=\"red\")\n",
+    "    ax.bar_label(negative, np.round(diffs[mask_negative], decimals=1), label_type=\"edge\", rotation=90)\n",
+    "    \n",
+    "    positive = ax.bar(classes[mask_positive], diffs[mask_positive], color=\"green\")\n",
+    "    ax.bar_label(positive, np.round(diffs[mask_positive], decimals=1), label_type=\"edge\", rotation=90)\n",
+    "\n",
+    "    ax.tick_params(axis='x', labelrotation=90)\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xlabel(\"Class\")\n",
+    "    ax.set_ylabel(f\"Change in {metric.replace('_', ' ').title()}\")\n",
+    "\n",
+    "    diff_range = max(diffs) - min(diffs)\n",
+    "    ax.set_ylim(bottom=min(diffs) - 0.2*diff_range, top=max(diffs) + 0.2*diff_range)\n",
+    "    ax.axhline(0, color=\"black\", lw=1, ls=\"-\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_diff_barchart(results) -> None:\n",
-    "    pass"
+    "def plot_diff_barchart(results: dict[str, Result]) -> None:\n",
+    "    # bar chart showing performance in each desired metric for each group of results using the str key as a name\n",
+    "    metrics = {\n",
+    "        \"Train Loss\": {\n",
+    "            \"key\": \"train_losses\",\n",
+    "            \"get_value\": lambda x: x[-1],\n",
+    "        },\n",
+    "        \"Train Accuracy (%)\": {\n",
+    "            \"key\": \"avg_train_accuracies\",\n",
+    "            \"get_value\": lambda x: x[-1]*100.0,\n",
+    "        },\n",
+    "        \"Test Loss\": {\n",
+    "            \"key\": \"test_losses\",\n",
+    "            \"get_value\": lambda x: x[-1],\n",
+    "        },\n",
+    "        \"Test Accuracy (%)\": {\n",
+    "            \"key\": \"avg_test_accuracies\",\n",
+    "            \"get_value\": lambda x: x[-1]*100.0,\n",
+    "        },\n",
+    "        \"Test Precision (%)\": {\n",
+    "            \"key\": \"avg_test_precision\",\n",
+    "            \"get_value\": lambda x: x*100.0,\n",
+    "        },\n",
+    "        \"Test Recall (%)\": {\n",
+    "            \"key\": \"avg_test_recall\",\n",
+    "            \"get_value\": lambda x: x*100.0,\n",
+    "        },\n",
+    "        \"Test F1 Score (%)\": {\n",
+    "            \"key\": \"avg_test_f1score\",\n",
+    "            \"get_value\": lambda x: x*100.0,\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    metric_names = list(metrics.keys())\n",
+    "    x = np.arange(len(metrics))\n",
+    "    total_width = 0.5\n",
+    "    width = total_width / len(results)\n",
+    "    offsets = np.linspace(-total_width/2, total_width/2, len(results))\n",
+    "    values = {}\n",
+    "    max_value = 0.0\n",
+    "    for result_name, result in results.items():\n",
+    "        for _, metric in metrics.items():\n",
+    "            if result_name not in values:\n",
+    "                values[result_name] = []\n",
+    "            value = metric[\"get_value\"](result.__getattribute__(metric[\"key\"]))\n",
+    "            values[result_name].append(value)\n",
+    "            if value > max_value:\n",
+    "                max_value = value\n",
+    "\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "    for i, result_name in enumerate(values):\n",
+    "        bars = ax.bar(x + offsets[i], values[result_name], width, label=result_name)\n",
+    "        ax.bar_label(bars, np.round(values[result_name], decimals=1), label_type=\"edge\", rotation=90)\n",
+    "\n",
+    "    ax.tick_params(axis='x', labelrotation=45)\n",
+    "    ax.set_title(\"Comparison of Results by Metric\")\n",
+    "    ax.set_xlabel(\"Metric\")\n",
+    "    ax.set_ylabel(\"Percent or Loss Depending on Metric\")\n",
+    "    ax.set_xticks(x, metric_names)\n",
+    "    ax.legend()\n",
+    "    ax.set_ylim(bottom=0, top=max_value + 0.2*max_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,11 +507,10 @@
     "        test_loader: torch.utils.data.DataLoader,\n",
     "        E: int,\n",
     "        verbose: Literal[\"none\", \"prints\", \"epoch_tqdm\", \"loader_tqdm\"] = \"epoch_tqdm\",\n",
-    "    ):\n",
+    "    ) -> Result:\n",
     "    \"\"\"\n",
     "    Train and test the given model with the given parameters.\n",
     "    \"\"\"\n",
-    "    # model = torch.compile(model)\n",
     "    loss_function = nn.CrossEntropyLoss().to(device)\n",
     "\n",
     "    accuracy_metric = MulticlassAccuracy(average='none', num_classes=NUM_CLASSES).to(device)\n",
@@ -548,24 +582,24 @@
     "\n",
     "    print(f\"\\nEvaluation results:\\nTrain Accuracy: {avg_train_accuracies[-1]*100:.2f}%, Train Loss: {train_loss:.4f}\\nTest Accuracy: {avg_test_accuracies[-1]*100:.2f}%, Test Loss: {test_loss:.4f}\")\n",
     "\n",
-    "    return {\n",
-    "        \"train_losses\": train_losses,\n",
-    "        \"avg_train_accuracies\": avg_train_accuracies,\n",
-    "        \"test_losses\": test_losses,\n",
-    "        \"test_accuracies\": test_accuracies,\n",
-    "        \"avg_test_accuracies\": avg_test_accuracies,\n",
-    "        \"test_precision\": test_precision,\n",
-    "        \"test_recall\": test_recall,\n",
-    "        \"test_f1score\": test_f1score,\n",
-    "        \"avg_test_precision\": avg_test_precision,\n",
-    "        \"avg_test_recall\": avg_test_recall,\n",
-    "        \"avg_test_f1score\": avg_test_f1score,\n",
-    "    }"
+    "    return Result(\n",
+    "        train_losses=train_losses,\n",
+    "        avg_train_accuracies=avg_train_accuracies,\n",
+    "        test_losses=test_losses,\n",
+    "        test_accuracies=test_accuracies,\n",
+    "        avg_test_accuracies=avg_test_accuracies,\n",
+    "        test_precision=test_precision,\n",
+    "        test_recall=test_recall,\n",
+    "        test_f1score=test_f1score,\n",
+    "        avg_test_precision=avg_test_precision,\n",
+    "        avg_test_recall=avg_test_recall,\n",
+    "        avg_test_f1score=avg_test_f1score,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,14 +608,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:54<00:00, 54.32s/it]"
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [37:41<00:00, 45.23s/it]"
      ]
     },
     {
@@ -590,8 +631,8 @@
      "text": [
       "\n",
       "Evaluation results:\n",
-      "Train Accuracy: 1.11%, Train Loss: 4.5019\n",
-      "Test Accuracy: 1.11%, Test Loss: 4.4992\n"
+      "Train Accuracy: 37.26%, Train Loss: 2.3609\n",
+      "Test Accuracy: 14.85%, Test Loss: 4.1641\n"
      ]
     },
     {
@@ -603,25 +644,31 @@
     }
    ],
    "source": [
+    "model_params = {\n",
+    "    \"name\": \"cnn_tune\",\n",
+    "    \"learning_rate\": 0.0075,\n",
+    "    \"weight_decay\": 0.0001,\n",
+    "    \"epochs\": 50,\n",
+    "}\n",
     "model = CNN(input_channels=NUM_CHANNELS, n_classes=NUM_CLASSES).to(device)\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=0.0001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=model_params[\"learning_rate\"], weight_decay=model_params[\"weight_decay\"])\n",
     "results_1 = train_and_test_model(\n",
     "    model=model,\n",
     "    optimizer=optimizer,\n",
     "    train_loader=train_loader,\n",
     "    test_loader=test_loader,\n",
-    "    E=1,\n",
+    "    E=model_params[\"epochs\"],\n",
     "    verbose=\"epoch_tqdm\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"results_1.pkl\", \"wb\") as f:\n",
+    "with open(f\"./results/{model_params[\"name\"]}_{model_params[\"epochs\"]}e_{str(model_params[\"learning_rate\"])[2:]}lr_{str(model_params[\"weight_decay\"])[2:]}wd.pkl\", \"wb\") as f:\n",
     "    pkl.dump(results_1, f)"
    ]
   },
